# hannelore

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  license.md  makefile  readme.md  style.md  tidy-up.sh
core/inc/: CameraData.h  CameraProcessor.h  EventManager.h  FileReader.h  Fonts.h  FragmentShader.h  GLHelper.h  Hashing.h  IDisposable.h  IGame.h  IResource.h  KeyCode.h  MaterialData.h  Mesh.h  MeshData.h  MeshLoader.h  MeshRenderSystem.h  MeshRenderer.h  PathUtil.h  ScreenSpaceTextProcessor.h  Shader.h  ShaderProgram.h  ShaderProgramBuilder.h  TextureData.h  TextureInformation.h  TextureLoader.h  Transform.h  Util.h  VertexShader.h  Window.h  stb_image.h
core/src/: CameraProcessor.cpp  FileReader.cpp  Fonts.cpp  Hashing.cpp  Mesh.cpp  MeshLoader.cpp  MeshRenderSystem.cpp  MeshRenderer.cpp  PathUtil.cpp  ScreenSpaceTextProcessor.cpp  Shader.cpp  ShaderProgram.cpp  ShaderProgramBuilder.cpp  TextureInformation.cpp  TextureLoader.cpp  Transform.cpp  Util.cpp  Window.cpp  stb_image.c
game/inc/: Game.h
game/src/: Game.cpp  Main.cpp
inc/: CameraData.h  CameraProcessor.h  EventManager.h  FileReader.h  Game.h  Guid.h  Hashing.h  IGame.h  IResource.h  KeyCode.h  MaterialData.h  Mesh.h  MeshData.h  MeshLoader.h  MeshRenderSystem.h  MeshRenderer.h  PathUtil.h  RenderProcessor.h  ScreenSpaceTextProcessor.h  Shader.h  ShaderProgram.h  ShaderProgramBuilder.h  TestGame.h  TextureData.h  TextureInformation.h  TextureLoader.h  Transform.h  Util.h  VertexShader.h  Window.h  stb_image.h
lib/fontstash-es/: shaders.h
lib/yanecos/: CMakeLists.txt
lib/yanecos/inc/yanecos/: Data.h  EntityManager.h  IData.h  IDataProcessor.h
lib/yanecos/lib/: catch.hpp  json.hpp
lib/yanecos/test/: main.cpp
res/models/: crazycube.blend  ground.blend  light.blend  skysphere.blend  suzanne.blend  suzanne.mtl
res/models/objs/: crazycube.mtl  ground.mtl  light_sphere.mtl  skysphere.mtl  stanford-dragon.mtl  suzanne.mtl
res/shaders/: basic.frag  basic.vert
res/shaders/300core/: basic.frag  basic.vert
res/shaders/300es/: basic.frag  basic.vert
res/shaders/330core/: basic.frag  basic.vert
res/shaders/es/: basic.frag  basic.vert
res/textures/: crazycube.uv.xcf  light.uv.xcf  suzanne.uv.xcf
src/: Game.cpp  Guid.cpp  Main.cpp  PathUtil.cpp  Shader.cpp  ShaderProgram.cpp  TestGame.cpp  Util.cpp  Window.cpp
test/: empty.h  hashing-test.h  main.cpp
